feat: add context menu for displaying actions on the current position